trunk/Archive2/f6/2ee08b8ba34001/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:11:20: error: too many arguments to function call, expected 0, have 1
        return sin(x);
               ~~~ ^
main.cpp:7:5: note: 'sin' declared here
    double sin() const { return 1.0; }
    ^
1 error generated.
